# minLog

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  logFile.cpp  logFile.hpp  logger.cpp  logger.hpp
test/: CMakeLists.txt  test_log.cpp
